--- a/css/mobile.css
+++ b/css/mobile.css
@@ -122,6 +122,16 @@ h4 {
   margin-left: 2rem;
 }
 
+.docs-title {
+  font-size: 1.8rem;
+}
+
+.nav-item {
+  font-size: 0.6rem;
+  margin-right: 1rem;
+  text-align: center;
+}
+
 /* old learn.html styling */
 .learn-grid-container {
   display: block;
